[package]
name = "rust-ui-orbtk"
version = "0.1.0"
authors = ["davidedelpapa <davidedelpapa@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orbtk = { git = "https://github.com/redox-os/orbtk.git", branch = "develop" }
